остались тесты и доработки 2

--- a/app/main/templates/index.html
+++ b/app/main/templates/index.html
@@ -21,6 +21,11 @@
         <span class="header__bookmark-counter">{{len_bookmarks}}</span>
       </a>
     </div>
+    <div class="search">
+      <form action="/search" class="search__form">
+        <input type="search" name="kw"  class="search__input" placeholder="Поиск постов">
+      </form>
+    </div>
   </header>
   <main class="container">
     <section class="items">
