--- a/app/main/templates/search.html
+++ b/app/main/templates/search.html
@@ -11,12 +11,12 @@
 <body>
   <header class="container header">
     <div class="header__wrapper">
-      <a href="/static" class="header__btn-back">
+      <a href="/" class="header__btn-back">
         <svg class="header__btn-icon" width="19" height="16">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use>
         </svg>
       </a>
-      <a href="/static" class="header__logo-link">
+      <a href="" class="header__logo-link">
         <svg class="header__logo" width="100" height="26">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#search"></use>
         </svg>
@@ -25,8 +25,8 @@
   </header>
   <main class="container">
     <div class="search">
-      <form action="/static" class="search__form">
-        <input type="search" class="search__input">
+      <form action="/search" class="search__form">
+        <input type="search" name="kw"  class="search__input" placeholder="Поиск постов">
       </form>
       <p class="search__results">Найдено постов: {{len_posts}}</p>
     </div>
@@ -34,14 +34,14 @@
       {% for post in posts %}
       <div class="items__item item">
         <div class="item__top">
-          <a href="/templates/user-feed.html-feed.html" class="item__head">
+          <a href=/users/{{post.poster_name}} class="item__head">
             <div class="item__ava-wrap">
               <img src={{post.poster_avatar}} alt="" class="item__ava" width="47">
             </div>
             <span class="item__username">{{post.poster_name}}</span>
           </a>
         </div>
-        <a href="/app/main/templates/post.html/post.html" class="item__post-link">
+        <a href="/posts/{{post.pk}}" class="item__post-link">
           <img src={{post.pic}} alt="" width="348" class="item__post-img">
         </a>
         <p class="item__descr"><a href="/templates/tag.htmls/tag.html" class="item__tag">#food</a>{{post.content|safe}}</p>
@@ -52,7 +52,7 @@
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/app/main/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/posts/{{post.pk}}" class="item__btn-more">Подробнее</a>
           <a href="/bookmarks/add/{{post.pk}}">
           <button type="button" class="item__bookmark-btn">
             <img src="../../../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
