--- a/app/main/templates/user-feed.html
+++ b/app/main/templates/user-feed.html
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="item__post-bottom">
-          <a href="/app/main/templates/post.html/post.html" class="item__btn-more">Подробнее</a>
+          <a href="/posts/{{post.pk}}" class="item__btn-more">Подробнее</a>
           <a href="/bookmarks/add/{{post.pk}}">
           <button type="button" class="item__bookmark-btn">
             <img src="../../../static/img/bookmark.png" alt="" class="item__bookmark-icon" width="24">
